--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   shared_preferences: ^2.5.3
   flutter_svg: ^2.2.0
   google_fonts: ^6.3.0
+  carousel_slider: ^5.1.1
 
 
 dev_dependencies:
