--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   google_fonts: ^6.3.0
   carousel_slider: ^5.1.1
   intl: ^0.20.2
+  flutter_bloc: ^9.1.1
+  dio: ^5.9.0
 
 
 dev_dependencies:
