--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   intl: ^0.20.2
   flutter_bloc: ^9.1.1
   dio: ^5.9.0
+  image_picker: ^1.2.0
+  image_cropper: ^9.1.0
 
 
 dev_dependencies:
