--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,12 @@ dependencies:
   extended_image: ^10.0.1
   path_provider: ^2.1.5
   geocoding: ^4.0.0
+  hive: ^2.2.3
+  google_sign_in: ^7.1.1
+  firebase_auth: ^6.0.1
+  firebase_core: ^4.0.0
+
+  
 
 
 dev_dependencies:
