--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   google_sign_in: ^7.1.1
   firebase_auth: ^6.0.1
   firebase_core: ^4.0.0
+  flutter_html: ^3.0.0
+  flutter_widget_from_html: ^0.17.0
 
   
 
