--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,17 +47,18 @@ dependencies:
   dio: ^5.9.0
   image_picker: ^1.2.0
   image_cropper: ^9.1.0
-  flutter_osm_plugin: ^1.4.2
   extended_image: ^10.0.1
   path_provider: ^2.1.5
   geocoding: ^4.0.0
+  flutter_osm_plugin: ^1.4.2
   hive: ^2.2.3
   google_sign_in: ^7.1.1
   firebase_auth: ^6.0.1
   firebase_core: ^4.0.0
   flutter_html: ^3.0.0
   flutter_widget_from_html: ^0.17.0
-
+  permission_handler: ^12.0.1
+  geolocator: ^14.0.2
   
 
 
