--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   flutter_widget_from_html: ^0.17.0
   permission_handler: ^12.0.1
   geolocator: ^14.0.2
+  url_launcher: ^6.3.2
   
 
 
